.blackbox/tmp/shell_tool_d059221403c7.log
 ⚠ Warning: Next.js inferred your workspace root, but it may not be correct.
 We detected multiple lockfiles and selected the directory of /Users/guillaume_deramchi/package-lock.json as the root directory.
 To silence this warning, set `turbopack.root` in your Next.js config, or consider removing one of the lockfiles if it's not needed.
   See https://nextjs.org/docs/app/api-reference/config/next-config-js/turbopack#root-directory for more information.
 Detected additional lockfiles: 
   * /Users/guillaume_deramchi/Documents/hack-station-f/package-lock.json

   ▲ Next.js 16.0.3 (Turbopack)
   - Local:         http://localhost:3000
   - Network:       http://172.20.10.3:3000
   - Environments: .env.local, .env

 ✓ Starting...
 ⚠ The "middleware" file convention is deprecated. Please use "proxy" instead. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy
 ✓ Ready in 561ms
[next-auth][warn][DEBUG_ENABLED] 
https://next-auth.js.org/warnings#debug_enabled
 GET / 200 in 1271ms (compile: 1131ms, render: 140ms)
   Reload env: .env.local
[next-auth][warn][DEBUG_ENABLED] 
https://next-auth.js.org/warnings#debug_enabled
 GET / 200 in 130ms (compile: 58ms, render: 72ms)
 ⚠ Cross origin request detected from 360fd9a8c164.ngrok-free.app to /_next/* resource. In a future major version of Next.js, you will need to explicitly configure "allowedDevOrigins" in next.config to allow this.
Read more: https://nextjs.org/docs/app/api-reference/config/next-config-js/allowedDevOrigins
[next-auth][warn][DEBUG_ENABLED] 
https://next-auth.js.org/warnings#debug_enabled
 GET /api/auth/session 200 in 723ms (compile: 710ms, render: 14ms)
 GET /register 200 in 385ms (compile: 371ms, render: 14ms)
 GET / 200 in 21ms (compile: 3ms, render: 19ms)
 POST /api/auth/register 409 in 926ms (compile: 173ms, render: 753ms)
 POST /api/auth/register 201 in 567ms (compile: 6ms, render: 561ms)
 GET /api/auth/providers 200 in 20ms (compile: 9ms, render: 11ms)
 GET /api/auth/csrf 200 in 6ms (compile: 1485µs, render: 5ms)
 POST /api/auth/callback/credentials 200 in 719ms (compile: 1638µs, render: 717ms)
 GET /api/auth/session 200 in 11ms (compile: 4ms, render: 8ms)
 GET / 200 in 21ms (compile: 1165µs, render: 20ms)
 GET / 200 in 12ms (compile: 1472µs, render: 11ms)
 GET /dashboard 200 in 244ms (compile: 219ms, proxy.ts: 4ms, render: 21ms)
 GET /dashboard 200 in 288ms (compile: 239ms, proxy.ts: 43ms, render: 7ms)
 GET /api/analytics/overview 200 in 695ms (compile: 50ms, render: 644ms)
 GET /api/companies 200 in 1017ms (compile: 101ms, render: 916ms)
 GET /api/companies 200 in 1036ms (compile: 120ms, render: 916ms)
 GET /api/analytics/overview 200 in 1147ms (compile: 100ms, render: 1047ms)
 GET /dashboard/setup 200 in 215ms (compile: 188ms, proxy.ts: 4ms, render: 23ms)
 GET /dashboard/setup 200 in 200ms (compile: 185ms, proxy.ts: 3ms, render: 12ms)
 GET /api/auth/session 200 in 11ms (compile: 3ms, render: 8ms)
 GET /api/auth/session 200 in 21ms (compile: 12ms, render: 9ms)
Finding leads with AI for campaign: cmi0kes9q0006elzng7bbqjhj
🤖 Initiating Retell AI call...
✅ Using Retell agent: agent_4980ab820b7fc709396ce4fa83
✅ Calling from: +12067454714
❌ Retell AI error: Error: 403 No valid KYC, please visit the dashboard and purchase a phone number to start KYC process.
    at async RetellClient.makeCall (src/lib/retell/retell-client.ts:129:18)
    at async POST (src/app/api/setup/complete/route.ts:175:30)
  127 |     dynamicVariables?: Record<string, any>;
  128 |   }): Promise<RetellCall> {
> 129 |     const call = await this.client.call.createPhoneCall({
      |                  ^
  130 |       override_agent_id: params.agentId,
  131 |       to_number: params.toNumber,
  132 |       from_number: params.fromNumber, {
  status: 403,
  headers: [Object],
  error: [Object]
}
⚠️  Falling back to Twilio...
 POST /api/setup/complete 200 in 13.8s (compile: 928ms, render: 12.9s)
Updated call cmi0kesgw000aelznnw1sxdkh status to initiated
 POST /api/twilio/status 200 in 355ms (compile: 69ms, render: 287ms)
Updated call cmi0kesgw000aelznnw1sxdkh status to ringing
 POST /api/twilio/status 200 in 241ms (compile: 7ms, render: 234ms)
 GET /api/calls/cmi0kesgw000aelznnw1sxdkh/transcript 200 in 744ms (compile: 536ms, render: 208ms)
 GET /api/calls/cmi0kesgw000aelznnw1sxdkh/transcript 200 in 63ms (compile: 7ms, render: 57ms)
Updated call cmi0kesgw000aelznnw1sxdkh status to in-progress
 POST /api/twilio/status 200 in 210ms (compile: 998µs, render: 209ms)
 GET /api/calls/cmi0kesgw000aelznnw1sxdkh/transcript 200 in 81ms (compile: 9ms, render: 72ms)
 GET /api/calls/cmi0kesgw000aelznnw1sxdkh/transcript 200 in 84ms (compile: 14ms, render: 71ms)
 GET /api/calls/cmi0kesgw000aelznnw1sxdkh/transcript 200 in 81ms (compile: 8ms, render: 73ms)
Updated call cmi0kesgw000aelznnw1sxdkh status to completed
 POST /api/twilio/status 200 in 532ms (compile: 954µs, render: 531ms)
Error finding leads with AI: SyntaxError: Unexpected token 'I', "I cannot p"... is not valid JSON
    at JSON.parse (<anonymous>)
    at findLeadsWithAI (src/lib/ai/lead-finder.ts:103:37)
    at async findAndAddLeads (src/app/api/setup/complete/route.ts:355:19)
  101 |
  102 |     // Parse the leads
> 103 |     const leads: FoundLead[] = JSON.parse(jsonContent);
      |                                     ^
  104 |
  105 |     // Validate and clean the data
  106 |     const validLeads = leads.filter(lead => 
Found 1 leads with AI
Successfully added 1 AI-found leads to campaign cmi0kes9q0006elzng7bbqjhj
 GET /api/calls/cmi0kesgw000aelznnw1sxdkh/transcript 200 in 62ms (compile: 6ms, render: 55ms)
 GET /api/auth/session 200 in 15ms (compile: 5ms, render: 10ms)
 GET /api/auth/session 200 in 20ms (compile: 10ms, render: 10ms)
 GET /api/auth/session 200 in 14ms (compile: 5ms, render: 9ms)
 GET /api/auth/session 200 in 12ms (compile: 4ms, render: 8ms)
 GET /api/auth/session 200 in 25ms (compile: 14ms, render: 10ms)
